---------------------------------------------------------------------------------------------------
Version: 0.1.19
Date: ???
  Changes:
    - Miners with quality should not accept speed bonuses
---------------------------------------------------------------------------------------------------
Version: 0.1.18
Date: 2023-11-25
  Changes:
    - Quality enhancing machines now have their module count in their localised names
  Bug fixes:
    - Fixed crash when trying to quality module programming of quality machines
    - Fixed lasers not shooting correctly in extra range
---------------------------------------------------------------------------------------------------
Version: 0.1.17
Date: 2023-11-24
  Changes:
    - Small extra walking speed bonuses for quality tiles + tints
  Bug fixes:
    - Fixed missing optional energy source bonuses
    - Fixed names of certain quality items and recipes
---------------------------------------------------------------------------------------------------
Version: 0.1.16
Date: 2023-11-21
  Bug fixes:
    - Fixed extra qualities breaking
---------------------------------------------------------------------------------------------------
Version: 0.1.15
Date: 2023-11-21
  Changes:
    - Added information about the deleveler
    - Refactored mods. Energy is now checked every time. Default mod accepts table.
    - Adjusted power for inserters and beacons
    - Recycling efficiency setting
    - Alternate item quality overlay position for better visibility on compacted belts
  Bug fixes:
    - Fixed quality armor not visible on character
---------------------------------------------------------------------------------------------------
Version: 0.1.14
Date: 2023-11-20
  Bug fixes:
    - Fixed low-resolution quality mask for beacons
    - Fixed programming not unlocking on some entities
    - Fixed icons of quality machines in upgrade planner